--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="utf-8">
     <title>Birdwatching</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
-
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 
   <body>
-
-      <h1>Birdwatching</h1>
+    <header>
+     <h1>Birdwatching</h1>
       <img src="./assets/img/dove.png" alt="a simple dove logo">
-
-
-      <ul>
+    </header>
+    <nav>
+       <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
         <li><a href="#">Photos</a></li>
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
+    </nav>
+     
 
 
       <h2>Welcome</h2>
